# InfernoML

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: activation_functions_example.cpp  kmeans_functions_example.cpp  linear_regression_example.cpp
include/activation/: activation_functions.h
include/algorithms/: kmeans.h  linear_regression.h  logistic_regression.h
src/activation/: activation_functions.cpp
src/algorithms/: kmeans.cpp  linear_regression.cpp
